# LearningProjects

./: .gitignore  .gitmodules  README.md
React-Native/sample/: package.json
agda/: #test.agda#  Week1.agda  Week2.agda  first.agda  idrisnotagda.agda  resources.md  test.agda  test1635.agda  test1825.agda  test2024.agda  testIdrisButNotAgda.agda
agda/HoTTEST/: Lecture1.agda  Session1.agda
agda/agda-lecture-note/: first.agda
agda/plfa/: plfaInduction.agda  plfaList.agda  plfaNaturals.agda  test.agda
cpp/: basics_and_templates.cpp  stl_lib.cpp
cpp/cmake_cpp/: CMakeLists.txt
cpp/cmake_cpp/source/: CMakeLists.txt
cpp/multifile/: func.cpp  main.cpp  test_f
cpp/rc_course/: ball.hpp  classes.cpp  exceptions.cpp  friends.cpp  optional_t.cpp  pointers.cpp  stl_lib.cpp
cpp/root_lib/: main.cpp  test_f
docker/: Dockerfile
javascript/JSClock/: index.html
javascript/Rick_roll_alerter/: manifest.json  script.js
julia/: calc.jl  test.jl  test_pybamm.jl
julia/calc/: calc.jl
julia/sciml/: ContinuousCallback.ipynb  LotkaVoltera.ipynb  StiffProblem.ipynb  lorenz_system.ipynb  parameterized_lorenz.ipynb
nodeMongoExpress/NodeNinja/: databse.js
python/Calc project/: Cipher.py
python/Colour files/: HCL.py  MyFile.spi1D  main.py
python/DeepLearning/: CPUvsGPU.ipynb  ODEApprox.py  logistic_regression_neural.py  simple_neural_net.ipynb  simple_neural_net_2.ipynb  tensorboard_intro.ipynb  tensorflow_intro.py
python/HEP/: Untitled.ipynb  conf.py  index.rst  jax-stuff.ipynb
python/LAMMPS/: .gitignore  README.md  requirements.txt  (+1 more)
sample/: package-lock.json
(+148 files in other folders)
